# video

./: .cvsignore  .edt_server.cpp.swp  .gitignore  .point_grey_server.h.swp  CMakeLists.txt  CUDA_video_filter.bat  CUDA_video_filter.cpp  CUDA_video_filter.tcl  ChangeLog  DirectShow_baseclasses.dsp  DirectShow_baseclasses.vcproj  EDT camera viewer.GRF  EDT capture to C_test_avi.GRF  EDT capture to D_jcribb_data.GRF  EDTSource.def  EDT_directx_dll.cpp  EDT_directx_dll.dsp  EDT_directx_dll.vcproj  FindCISMM_VIDEO.cmake  FindVRPN.cmake  GLUItake.dsp  GLUItake.vcproj  Intallation_README.txt  Makefile  PGRCam.cpp  PGRCam.h  PGRCam_old_version.cpp  Panoptes_Stage_Control.cpp  Panoptes_Stage_Control.vcproj  PanopticNerve - Magnesium.vcproj  PanopticNerve.vcproj  README.txt  README_build.txt  SC2_Cam.txt  SEM_camera_server.cpp  SEM_camera_server.h  SEM_library.dsp  SEM_library.vcproj  Tcl_Linkvar.C  Tcl_Linkvar.h  (+161 more)
EDT_directx_dll/: EDT_directx_dll.qsp  Installation_README.txt  autorun.inf  unregister.bat
GLUI_take/: GLUI_take.qsp  GLUItake.bat  ptm6710cl_3dfm.cfg
PointGrey_ROI/: PointGrey_ROI.cpp  PointGrey_ROI.vcproj  stdafx.cpp
PointGrey_ROI/Camera_Output/: Thumbs.db
add_noise_to_image/: add_noise_to_image.qsp
airy_maker/: Airy_pattern.xls  Installation_README.txt  airy_maker.bat  airy_maker.qsp  noise_description.doc
average_videos/: average_videos.bat  average_videos.qsp  max_videos.bat  min_videos.bat
cismm_video_optimizer/: Installation_README.txt  cismm_video_optimizer.bat  cismm_video_optimizer.html  cismm_video_optimizer.qsp
cmake/: FindCISMM_VIDEO.cmake  FindCooke.cmake  FindDiagInc.cmake  FindEDT.cmake  FindFFMPEG.cmake  FindLEWOS.cmake  FindLEWOSSIM.cmake  FindNSRGBUILD.cmake  FindOpenCV.cmake  FindPanoptes.cmake  FindPointGrey.cmake  FindRoper.cmake  FindVRPN.cmake  Findquatlib.cmake
good_manifests/: video_imager_server.exe.manifest
make_moving_spot_video/: make_moving_spot_video.qsp
stack_collector/: Installation_README.txt  autorun.inf  stack_collector.qsp
stereo_spin/: 4TNA.avi  Installation_README.txt  stereo_spin.bat  stereo_spin.html  stereo_spin.qsp
stocc_random_number_generator/: erfres.cpp  erfresmk.cpp  ex-cards.cpp  ex-lotto.cpp  ex-stoc.cpp  fnchyppr.cpp  stoc1.cpp  stoc3.cpp  stocc.h  stocc.htm  stocc_random_number_generator.dsp  stocc_random_number_generator.vcproj  testbino.cpp  testfnch.cpp  testhype.cpp  testmfnc.cpp  testmwnc.cpp  testpois.cpp  testwnch.cpp  userintf.cpp  wnchyppr.cpp
stocc_test_poisson/: stocc_test_poisson.dsp  stocc_test_poisson.vcproj
tracker_testing_tools/: Installation_README.txt  spot_tracker_testing_tools.qsp
video_imager_server/: setup_edt_for_pulnix.bat  video_imager_server.bat  video_imager_server.qsp
video_spot_tracker/: Installation_README.txt  Video Spot Tracker.aip  autorun.inf  panoptic_nerve_demo.bat  video_spot_tracker.html  video_spot_tracker.qsp
video_tempimager_server/: video_tempimager_server.qsp
video_z_tracker/: ChangeLog  PixelLine.cpp  PixelLine.h  PlotGLCanvas.cpp  PlotGLCanvas.h  PlotWindow.cpp  PlotWindow.h  SpotInformation.h  Stage.cpp  Stage.h  TestGLCanvas.cpp  TestGLCanvas.h  ZGuesser.cpp  ZGuesser.h  cameraImage.cpp  cameraImage.h  fftw3.h  fileToTexture.h  libfftw3-3.lib  wxUtils.cxx  wxUtils.h  ztracker.cpp  ztracker.h  ztrackmain.cpp
